# docassemble

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Dockerfile  dashing.json  docset.bash
.github/workflows/: push-to-ghcr.yml  pypi-publish.yml
.jjconflict-base-0/.github/workflows/: push-to-ghcr.yml
.jjconflict-base-0/Docker/: initialize.sh  requirements-preinstall.txt
.jjconflict-base-1/: .gitignore  Dockerfile  make-screenshots.sh
.jjconflict-base-2/: Dockerfile
.jjconflict-base-2/docassemble_webapp/: pyproject.toml
.jjconflict-base-2/docassemble_webapp/docassemble/webapp/: jsonstore.py
.jjconflict-side-0/: CHANGELOG.md  Dockerfile
.jjconflict-side-0/Docker/: initialize.sh
.jjconflict-side-1/Docker/: VERSION  get_packages.py
.jjconflict-side-2/: Dockerfile
.jjconflict-side-3/: Dockerfile
.jjconflict-side-3/Docker/: get_packages.py  initialize.sh  requirements-preinstall.txt
.jjconflict-side-3/docassemble_base/: pyproject.toml
.jjconflict-side-3/docassemble_demo/: pyproject.toml
Docker/: Dockerfile.preinstall  VERSION  docassemble-supervisor.conf  docassemble-syslog-ng.conf  get_packages.py  initialize.sh
Docker/config/: nginx-http.dist  nginx-ssl.dist
docassemble_base/: pyproject.toml
docassemble_base/docassemble/base/: __init__.py  file_docx.py  parse.py  standardformatter.py
docassemble_demo/: pyproject.toml
docassemble_demo/docassemble/demo/: __init__.py
docassemble_webapp/: pyproject.toml
docassemble_webapp/docassemble/webapp/: __init__.py  info.py  jsonstore.py  server.py  setup.py  update.py
(+14 files in other folders)
