[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"
[project]
name = "suffolklitlab-docassemble.demo"
version = '1.9.7.post2'
description = "Suffolk LIT Lab's fork of a demonstration package for docassemble."
readme = "README.md"
authors = [
  {name = "Jonathan Pyle", email = "jhpyle@gmail.com"},
  {name = "Bryce Willey", email = "litlab@suffolk.edu"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">= 3.9"
dependencies = [
  'suffolklitlab-docassemble.base==1.9.7.post2'
#  "ics",
#  "openai",
#  "anthropic",
#  "gspread",
#  "matplotlib"
]
[tool.setuptools.packages.find]
where = ["."]
[project.urls]
Homepage = "https://docassemble.org"
Documentation = "https://docassemble.org/docs.html"
Repository = "https://github.com/SuffolkLITLab/docassemble.git"
"Bug Tracker" = "https://github.com/SuffolkLITLab/docassemble/issues"
Changelog = "https://github.com/SuffolkLITLab/docassemble/blob/master/CHANGELOG.md"
